# censos-api

./: Cargo.toml
frontend/: package.json
frontend/src/: App.tsx  main.tsx
frontend/src/components/: BusinessTable.tsx  Header.tsx  Layout.tsx  NotifiersTable.tsx  Searcher.tsx  TabPanel.tsx  ZonesTable.tsx  index.tsx  openScreenButton.tsx
frontend/src/context/: InfoContext.tsx  InfoContextProvider.tsx
frontend/src/helpers/: business.tsx  index.tsx  listeners.tsx  notifiers.tsx  zones.tsx
frontend/src/models/: index.tsx
frontend/src/routers/: MainRouter.tsx
frontend/src/screens/: Login.tsx  Main.tsx  NewBusiness.tsx  NewNotifier.tsx  NewZone.tsx  Notifiers.tsx  UpdatePassword.tsx  Zones.tsx  index.tsx
frontend/src/styles/: Button.css  Forms.css  Header.css  Layout.css  Login.css  Main.css  Searcher.css  Tables.css
src/: auth.rs  business.rs  db.rs  main.rs  migrations.rs  models.rs  notifiers.rs  zones.rs
