[package]
name = "censos-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bcrypt = "0.13.0"
chrono = "0.4.23"
jsonwebtoken = "8.2.0"
mysql = "23.0.1"
rocket = { version="0.5.0-rc.2", features = ["json"]} 
